deploy/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcg-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pcg-app
  template:
    metadata:
      labels:
        app: pcg-app
    spec:
      containers:
        - name: pcg-app
          image: pcg-back
          ports:
            - containerPort: 8080
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: pcg-app-service
spec:
  selector:
    app: pcg-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
  type: NodePort
