deploy/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcg-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pcg-db
  template:
    metadata:
      labels:
        app: pcg-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdata
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pcg-db
spec:
  selector:
    app: pcg-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
